# openbook-candles

./: .env-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.worker  LICENSE.md  README.md  docker-compose.yml  fly.toml  markets.json  sqlx-data.json
candle-creator/: Cargo.toml  sqlx-data.json
candle-creator/src/: main.rs
candle-creator/src/candle_batching/: batcher.rs  higher_order_candles.rs  minute_candles.rs  mod.rs
candle-creator/src/database/: database.rs  fetch.rs  fetchers.rs  initialize.rs  insert.rs  mod.rs  sample.rs
candle-creator/src/trade_fetching/: backfill.rs  mod.rs  parsing.rs  scrape.rs  websocket.rs
candle-creator/src/utils/: mod.rs
cd/: server.toml  worker.toml
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
src/backfill/: main.rs
src/backfill-candles/: main.rs
src/backfill-trades/: main.rs
src/candle_creation/: main.rs  mod.rs
src/candle_creation/candle_batching/: higher_order_candles.rs  minute_candles.rs  mod.rs
src/candle_creation/trade_fetching/: backfill.rs  mod.rs  parsing.rs  scrape.rs  websocket.rs
src/database/: fetch.rs  initialize.rs  insert.rs  mod.rs
src/server/: candles.rs  coingecko.rs  main.rs  markets.rs  mod.rs  server_error.rs  traders.rs
src/structs/: candle.rs  coingecko.rs  markets.rs  mod.rs  openbook.rs  resolution.rs  slab.rs  trader.rs  tradingview.rs  transaction.rs
src/utils/: mod.rs
src/worker/: main.rs  mod.rs
src/worker/candle_batching/: higher_order_candles.rs  minute_candles.rs  mod.rs
src/worker/metrics/: mod.rs
src/worker/trade_fetching/: parsing.rs  scrape.rs
