[package]
name = "openbook-candle-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "decimal" ] }
chrono = "0.4.23"

solana-client = "=1.14.13"
solana-account-decoder = "=1.14.13"
solana-transaction-status = "=1.14.13"
solana-sdk = "=1.14.13"
solana-rpc = "=1.14.13"
spl-token = "3.5.0"
anchor-client = "=0.26.0"
borsh = "0.9"

async-trait = "0.1"

anyhow = "1.0"
log = "0.4"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
strum = { version = "0.24", features = ["derive"] }
num-traits = "0.2"

serum_dex = { version = "0.5.10", git = "https://github.com/openbook-dex/program.git", default-features=false, features = ["no-entrypoint", "program"] }
anchor-lang = ">=0.25.0"
