[package]
name = "openbook-candle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = "4.3.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
env_logger = "0.10.0"
dotenv = "0.15.0"
